package DP.Tutorial.Factory.CakeFactory;

public abstract class CakeFactory {


}
